--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   dio:
   glutton:
   image_picker:
+  firebase_core:
+  firebase_database:
+  cloud_firestore: 1.0.0
+  firebase_auth: 2.0.0
+  firebase_storage: 8.0.0
+  google_sign_in:
+  flutter_redux: 0.9.0
 
 dev_dependencies:
   flutter_test:
